--- a/w1/index.html
+++ b/w1/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Week 1</title>
     <script src="main.js"></script>
 </head>
 <body>
-<h1>Rio's First Page</h1>
-<h2>Using JavaScript this is live</h2>    
+    <h1>Rio's First Page</h1>
+    <h2>Using JavaScript this is live</h2>    
 </body>
 </html>
