--- a/w1/index.html
+++ b/w1/index.html
@@ -7,7 +7,6 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <h1>Rio's First Page</h1>
-    <h2>Using JavaScript this is live</h2>    
+    <h1>Hello World</h1>   
 </body>
 </html>
