--- a/w2/index.html
+++ b/w2/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="main.js"></script>
-</head>
+    </head>
+    <script defer src="main.js"></script>
 <body>
-    <H1>My Total Carbon Footprint is:
-    </H1>
-    
+    <H1>My Total Carbon Footprint is: </H1>
+    <H2>Total</H2>    
 </body>
 </html>
