update output to DOM

--- a/w3/index.html
+++ b/w3/index.html
@@ -6,7 +6,5 @@
     <title>Week 3 - Carbon Footprint Household</title>
     <script src="main.js"></script>
 </head>
-<body>
-    
-</body>
+<body></body>
 </html>
