--- a/w6/index.html
+++ b/w6/index.html
@@ -27,11 +27,11 @@
             <legend>Calculating Your Carbon Footprint</legend>
             <div>
                 <label for="">First Name:</label>
-                <input type="text" name="firstname" required>
+                <input type="text" name="firstname" minlength="1" maxlength="20" required>
             </div>
             <div>
                 <label>Last Name:</label>
-                <input type="text" name="lastname" required>
+                <input type="text" name="lastname" minlength="1" maxlength="20" required>
             </div>
             <div>
                 <label>Total Househould Member(s):</label>
