--- a/w9/index.html
+++ b/w9/index.html
@@ -4,9 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Week 8 - Carbon Footprint</title>
+    <title>Week 9 - Custom Form Validation </title>
     <link rel="stylesheet" href="style.css">
     <script type="module" src="main.js" defer></script>
+    <style>
+        .error {
+            color: red;
+        }
+    </style>
 </head>
 
 <body>
@@ -15,11 +20,13 @@
             <legend>Calculating Your Carbon Footprint</legend>
             <div>
                 <label for="">First Name:</label>
-                <input type="text" name="firstname" minlength="1" maxlength="20" required>
+                <input type="text" id="firstName" minlength="1" maxlength="20">
+                <span id="firstNameError" class="error"></span>
             </div>
             <div>
                 <label>Last Name:</label>
-                <input type="text" name="lastname" minlength="1" maxlength="20" required>
+                <input type="text" id="lastName" minlength="1" maxlength="20">
+                <span id="lastNameError" class="error"></span>
             </div>
             <div>
                 <label>Total Househould Member(s):</label>
