my attempt at code challenge

--- a/w11/index.html
+++ b/w11/index.html
@@ -39,6 +39,17 @@
                     <option value="apartment">Apartment</option>
                 </select>
             </div>
+            <div>
+                <label>Your Food Choice:</label>
+                <!-- <input type="text" name="foodChoice" required> -->
+                <select name="foodChoice" required>
+                    <option value="">---Select your food choice---</option>---</option>
+                    <option value="meat daily basis">I eat domestic meat on the daily basis</option>
+                    <option value="meat few times per week">I eat domestic meat a few times per week</option>
+                    <option value="vegetarian">I am a vegetarian</option>
+                    <option value="vegan or wild meat">I am vegan or eat only wild meat</option>
+                </select>
+            </div>
             <button type="submit">Submit</button><br>
             <span id="submitError" class="error"></span>
         </fieldset>
