--- a/w12/index.html
+++ b/w12/index.html
@@ -7,6 +7,33 @@
     <script defer src=""></script>
 </head>
 <body>
-    
+    <body>
+        <form id="form">
+            <fieldset id="fieldset">
+                <legend>Time to get FIT!</legend>
+                <div>
+                    <label>Type of Exercise:</label>
+                    <select name="exerciseType" required>
+                        <option value="">---Select a workout---</option>
+                        <option value="pushUps">Pushups</option>
+                        <option value="sitUps">Situps</option>
+                        <option value="lunges">Lunges</option>
+                        <option value="burpee">Burpees</option>
+                        <option value="squats">Squats</option>
+                    </select>
+                </div>    
+                <div>
+                    <label>Target Number of Reps:</label>
+                    <input type="number" name="numRep" min="1" max="40" required>
+                </div>
+                <div>
+                    <label>Timer in Seconds:</label>
+                    <input type="number" name="workoutTime" min="1" required>
+                </div>
+                <button type="submit">Submit</button>
+            <div> Submit to Begin Time</div>
+            </fieldset>
+            <div id="output"> 
+                <div>
 </body>
 </html>
