w12 my attempt at the code before I review other students code

--- a/w12/index.html
+++ b/w12/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script defer src=""></script>
+    <link rel="stylesheet" href="style.css">
+    <script defer src="main.js"></script>
 </head>
 <body>
     <body>
@@ -15,8 +16,8 @@
                     <label>Type of Exercise:</label>
                     <select name="exerciseType" required>
                         <option value="">---Select a workout---</option>
-                        <option value="pushUps">Pushups</option>
-                        <option value="sitUps">Situps</option>
+                        <option value="pushups">Pushups</option>
+                        <option value="situps">Situps</option>
                         <option value="lunges">Lunges</option>
                         <option value="burpee">Burpees</option>
                         <option value="squats">Squats</option>
