my updated code

--- a/w13/index.html
+++ b/w13/index.html
@@ -29,7 +29,7 @@
                 </div>
                 <div>
                     <label>Timer in Seconds:</label>
-                    <input type="number" name="workoutTime" min="1" required>
+                    <input type="number" name="workoutTime" required>
                 </div>
                 <button type="submit">Submit</button>
             <div> Submit to Begin Time</div>
