--- a/w15/index.html
+++ b/w15/index.html
@@ -54,4 +54,4 @@
         </fieldset>
     </form>
     <div id="tab-data"></div>
-    <table id="myTable"></table>
+    <table id="table-id"></table>
