--- a/w16/index.html
+++ b/w16/index.html
@@ -68,6 +68,20 @@
                     <option value="0">Don't have a dishwasher</option>
                 </select>
             </div>
+            <div>
+                <input type="checkbox" id="checkbox" checked />
+                <label>You have a dishwasher and washing machine.</label>
+              </div>
+              <div>
+                <label>Household Purchases</label>
+                <select name="houseItem" required>
+                    <option value="">---How many new household items do you purchase per year---</option>
+                    <option value="10"> More than 7 new household household items</option>
+                    <option value="8">Between 5 and 7 new household items</option>
+                    <option value="6">Between 3 and 5 new household items</option>
+                    <option value="2">Only secondhand items or almost nothing at all</option>
+                </select>
+            </div>
             <button type="submit">Submit</button><br>
             <span id="submitError" class="error"></span>
         </fieldset>
